--- a/Forestta/src/Components/Hero.css
+++ b/Forestta/src/Components/Hero.css
@@ -1,4 +1,5 @@
 .home{
+    position: fixed;
     margin: 0;
     padding: 0;
     background-size: cover;
@@ -6,49 +7,71 @@
     width: 100vw;
     gap: 12px;
     background-color: rgb(5, 46, 5);
-    font-weight: 400px;
+    /* font-weight: 400px; */
     justify-content: center;
     align-items: center;
     padding-top: 100px;
     padding-left: 400px;
     color: white;
+    animation: text 10s 1;
+}
+@keyframes text{
+    0%{
+        color: rgb(5, 46, 5);
+        margin-bottom: -600px;
+    }
+    30%{
+        margin-bottom: -600px;
+    }
+    85%{
+        margin-bottom: -600px;
+    }
 }
 .home small{
-    font-size: 20px;
-    margin-left: 60px;
-    margin-bottom: 200px;
+    font-size: 30px;
+    margin-left: 300px;
+    margin-top: 200px;
+    margin-bottom: -200px;
 }
 .home small span{
-    font-size: 180px;
+    font-size: 200px;
     font-weight: 60px;
     font-family: "Great Vibes",serif;
 }
 .home p{
-    border: 2px solid green;
-    box-shadow: 0 0 0 5px white;
+    border: 2px solid white;
+    box-shadow: 0 0 0 5px green;
     width: 400px;
     height: 140px;
     padding-left: 60px;
+    margin-top: -140px;
     margin-left: 80px;
     border-bottom-left-radius: 100px;
     border-top-right-radius: 100px;
     background-color: white;
     color: rgb(5, 46, 5);
+    animation: text 5s 2;
 }
 .home p span{
-    margin-bottom: 40px;
+    padding-left: 40px;
+    padding-top: -200px;
     font-size: 60px;
     font-family: "Great Vibes", serif;
-    font-weight: 100;
+    /* font-weight: 200px; */
+    letter-spacing: 6px;
 }
 #hero{
     margin-bottom: 200px;
     position: relative;
-    transform: rotate(-15deg);
+    transform: rotate(-7.5deg);
     animation: move 4s 100000;    
 }
 @keyframes move{
     0%{top:0px;}
     50%{top: 30px;}
     100%{top: 0px;}
+}
+.home i{
+    margin-top: 400px;
+    margin-left: 60px;
 }
