--- a/Forestta/src/Components/About.css
+++ b/Forestta/src/Components/About.css
@@ -12,12 +12,18 @@
     font-optical-sizing: auto;
     font-style: normal;
     font-size: 60px;
-    animation: do;
+    animation: do auto linear;
+    animation-timeline: scroll;
 }
 @keyframes do{
     0%{
-        color: rgb(5, 46, 5);
-        margin-bottom: -60px;
+        margin-bottom: 20px;
+    }
+    80%{
+        margin-bottom: 10px;
+    }
+    100%{
+        margin-bottom: 0px;
     }
 }
 
