--- a/Forestta/src/Components/Enquiries.css
+++ b/Forestta/src/Components/Enquiries.css
@@ -2,28 +2,93 @@
     height: 1000px;
     background-color: white;
 }
-#cards{
+section{
     display: flex;
-    height: 100px;
-    
 }
-#cards p{
-    color: black;
-    font-family: "Oswald", serif;
+#card1{
+    background-color: rgb(247, 242, 233);
+    width: 500px;
+    height: 300px;
+    padding-top: 60px;
+    margin-top: 100px;
+    margin-left: 100px;
+    border-radius: 10px;
+    border: 1px solid rgb(5, 46, 5);
+}
+#card1 p{
+    padding-left: 40px;
+    color: rgb(5, 46, 5);
     font-size: 40px;
+    font-family: "Oswald", serif;
 }
-#cards button{
-    
-    border: none;
-    color: green;
-    background-color: rgba(255, 255, 255, 0);
-    font-size: 30px;
-}
-/* .card{ 
-   
-    padding-bottom: 40px;
-}
-.card2{
+#card1 button{
+    border: 1px;
+    border-radius: 20px;
     background-color: rgb(5, 46, 5);
     color: white;
-} */
+    width: 150px;
+    font-size: 20px;
+    margin-left: 40px;
+}
+#card1 button:hover{
+    background-color: white;
+    color: rgb(5, 46, 5);
+    border: 1px solid rgb(5, 46, 5);
+}
+#card2 {
+    background-color: rgb(5, 46, 5);
+    width: 500px;
+    height: 300px;
+    padding-top: 60px;
+    margin-top: 100px;
+    margin-left: 100px;
+    border-radius: 10px;
+}
+
+#card2 p {
+    padding-left: 40px;
+    color: white;
+    font-size: 40px;
+    font-family: "Oswald", serif;
+}
+
+#card2 button {
+    border: 1px solid white;
+    border-radius: 20px;
+    background-color: rgb(5, 46, 5);
+    color: white;
+    width: 150px;
+    font-size: 20px;
+    margin-left: 40px;
+}
+
+#card2 button:hover {
+    background-color: white;
+    color: rgb(5, 46, 5);
+    border: 1px solid rgb(5, 46, 5);
+}
+#card3{
+    background-color: rgb(5, 46, 5);
+    display: flex;
+    width: 1100px;
+    height: 400px;
+    margin-top: 30px;
+    margin-left: 100px;
+    border-radius: 10px;
+}
+#card3 img{
+    height: 300px;
+    width: 500px;
+    margin-left: 20px;
+    margin-bottom: 200px;
+}
+#card3 p{
+    padding-top: 100px;
+    margin-left: 600px;
+    font-size: 40px;
+    font-family: "Oswald", serif;
+    color: white;
+}
+#card3 button{
+    margin-left: 600px;
+}
