--- a/Forestta/src/Components/Enquiries.css
+++ b/Forestta/src/Components/Enquiries.css
@@ -1,9 +1,11 @@
 .enquiries{
     height: 1000px;
     background-color: white;
+    overflow: hidden;
 }
 section{
     display: flex;
+   
 }
 #card1{
     background-color: rgb(247, 242, 233);
@@ -67,7 +69,7 @@ section{
     color: rgb(5, 46, 5);
     border: 1px solid rgb(5, 46, 5);
 }
-#card3{
+ #card3{
     background-color: rgb(5, 46, 5);
     display: flex;
     width: 1100px;
@@ -77,10 +79,12 @@ section{
     border-radius: 10px;
 }
 #card3 img{
+    margin-top: 60px;
     height: 300px;
     width: 500px;
     margin-left: 20px;
     margin-bottom: 200px;
+    border-radius: 10px;
 }
 #card3 p{
     padding-top: 100px;
