--- a/Forestta/src/Components/Hero.css
+++ b/Forestta/src/Components/Hero.css
@@ -1,4 +1,7 @@
 .home{
+    /* overflow-y: hidden; */
+}
+.element{
     background-color: rgb(5, 46, 5);
     background-size: cover;
     height: 100vh;
@@ -71,8 +74,7 @@
     background-color: rgb(5, 46, 5);
     height: 600px;
     width: 100%;
-    overflow-clip-margin: content-box;
-    /* overflow-x: hidden; */
+    
     /* position: relative; */
  }
  .image img{
@@ -87,8 +89,11 @@
     animation: fade-in forwards;
     animation-timeline: view();
     animation-range-start: cover;
-    /* animation-range: 240px 500px; */
+    animation-range: 400px ;
  }
  @keyframes fade-in{
-    to{scale: 1.1;}
+    to{scale: 1.3;}
  }
+.image::after{
+    overflow: hidden;
+}
